fix: no wrap for tier header

--- a/src/components/auctions/AuctionReview.scss
+++ b/src/components/auctions/AuctionReview.scss
@@ -274,6 +274,7 @@
         left: 50%;
         top: 0%;
         transform: translate(-50%, -50%);
+        white-space: nowrap;
       }
 
       .auction-reward__box {
